examples/test/testpolicy2174.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2174
  namespace: namespace301
spec:
  podSelector:
    matchLabels:
      key15: value8
      key23: value38
      key18: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value49
          key39: value11
          key19: value19
      podSelector:
        matchLabels:
          key21: value10
          key47: value20
          key49: value16
